src/Components/MyWork/MyWork.css
/* MyWork.css */
.mywork{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 80px;
    margin: 80px 170px;
}

.mywork-title{
    position: relative;
}

.mywork-title h1{
    padding: 0px 30px;
    font-size: 80px;
    font-weight: 600;
}

.mywork-title img{
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: -1;
}

.mywork-container{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 40px;
}

.work-item {
    position: relative;
    overflow: hidden;
    transition: transform 0.3s;
    border-radius: 10px;
    border: 2px solid transparent; /* Add this line */
}

.work-item img{
    box-sizing: border-box;
    width: 419px;
    height: 280px;
    transition: 0.3s;
    cursor: pointer;
    object-fit: cover; /* Add this line */
    border-radius: 10px; /* Add this line */
}

.work-item:hover img{
    transform: scale(1.10);
}

.work-item:hover{
    border: 2px solid #ff00ff;
    border-radius: 10px;
    transition: 0.3s;
}

.work-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.6);
    opacity: 0;
    transition: opacity 0.3s;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
    color: #fff;
    padding: 20px;
    box-sizing: border-box;
    border-radius: 10px; /* Add this line */
}

.work-overlay .work-title {
    font-size: 24px;
    font-weight: bold;
}

.work-item:hover .work-overlay {
    opacity: 1;
}

.work-links {
    display: flex;
    gap: 10px;
}

.work-links a {
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 8px 16px;
    border-radius: 8px;
    text-decoration: none;
    color: white;
    background-color: #ff00ff;
    transition: transform 0.3s;
}

.work-links a:hover {
    transform: scale(1.1);
}

.mywork-showmore{
    display: flex;
    gap: 15px;
    border-radius: 50px;
    border: 2px solid white;
    padding: 30px 60px;
    font-size: 22px;
    font-weight: 500;
    margin-bottom: 80px;
    transition: 0.6s;
    cursor: pointer;
}

.mywork-showmore:hover{
    gap: 30px;
    transition: 0.6s;
}

@media(max-width: 768px){
    .mywork{
        gap: 50px;
        margin: 50px 70px;
        align-items: start;
    }

    .mywork-title h1{
        padding: 0;
        font-size: 50px;
        font-weight: 600;
    }

    .mywork-title img{
        width: 130px;
        margin-right: 100px;
    }

    .mywork-container{
        grid-template-columns: 1fr;
        gap: 30px;
    }

    .mywork-container img{
        width: 100%;
        height: 100%;
    }

    .mywork-showmore{
        padding: 20px 40px;
        font-size: 18px;
        margin: 50px auto;
        cursor: pointer;
    }
}

